Fixed Help-related Unit Tests